# commits-of-interest

./: CLAUDE.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: entries.rs  git.rs  github.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: event.rs  lib.rs  ui.rs
src/: git.rs  github.rs  main.rs
src/tui/: event.rs  mod.rs  ui.rs
tests/: ci.rs
