[workspace]
members = [".", "crates/core", "crates/tui"]

[package]
name = "commits-of-interest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
commits-of-interest-core = { path = "crates/core" }
commits-of-interest-tui = { path = "crates/tui" }
git2 = "0.20"

[dev-dependencies]
ctor = "0.6"
assert_cmd = "2.0"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]
